# flowbuddy-ha

./: .gitignore  LICENSE  Makefile  README.md  hacs.json  info.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: regen-check.yml  tests.yml  validate.yml
custom_components/flowbuddy/: __init__.py  _coord_alarms.py  _coord_daily.py  _coord_instant.py  api.py  auth.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  discovery.py  entity.py  manifest.json  number.py  sensor.py  services.yaml  strings.json
custom_components/flowbuddy/_generated/: __init__.py
custom_components/flowbuddy/_generated/models/: __init__.py  access_right_output_list_model.py  access_right_output_model.py  aggregation_day_value_output_list_model.py  aggregation_day_value_output_model.py  aggregation_month_value_output_list_model.py  aggregation_month_value_output_model.py  aggregation_year_value_output_list_model.py  aggregation_year_value_output_model.py  alarm_add_comment_post_input_model.py  alarm_add_comment_post_input_model_other_properties.py  alarm_add_comment_post_input_model_other_properties_additional_property.py  alarm_add_comment_post_input_model_other_properties_type_0.py  alarm_add_comment_post_input_model_other_properties_type_0_additional_property.py  alarm_output_list_model.py  alarm_output_model.py  alarm_set_to_closed_post_input_model.py  alarm_set_to_closed_post_input_model_other_properties.py  alarm_set_to_closed_post_input_model_other_properties_additional_property.py  alarm_set_to_closed_post_input_model_other_properties_type_0.py  alarm_set_to_closed_post_input_model_other_properties_type_0_additional_property.py  alarm_set_to_pending_post_input_model.py  alarm_set_to_pending_post_input_model_other_properties.py  alarm_set_to_pending_post_input_model_other_properties_additional_property.py  alarm_set_to_pending_post_input_model_other_properties_type_0.py  alarm_set_to_pending_post_input_model_other_properties_type_0_additional_property.py  api_account_output_list_model.py  api_account_output_model.py  api_account_reference_model.py  api_measurement_output_model.py  (+354 more)
custom_components/flowbuddy/translations/: en.json  fr.json  nl.json
docs/superpowers/plans/: 2026-07-07-flowbuddy-ha-implementation.md
docs/superpowers/specs/: 2026-07-07-flowbuddy-ha-design.md
openapi/: flexmon-v1.json  flexmon-v1.json.sha256  flexmon-v1.sha256
tests/: conftest.py  test_api.py  test_auth.py  test_binary_sensor.py  test_button.py  test_climate.py  test_config_flow.py  test_coordinator_alarms.py  test_coordinator_daily.py  test_coordinator_instant.py  test_diagnostics.py  test_discovery.py  test_entity.py  test_init.py  test_number.py  test_sensor.py  test_sensor_integrator.py  test_services.py
tests/fixtures/: aggregationdayvalues.json  alarms_open.json  batteries.json  communicators.json  hvacs.json  installations.json  instantvalues.json  inverters.json  measurements.json  measurementtypes.json  meters.json  polling_limit_exceeded_event.json  realtimevalues.json  token_success.json
(+147 files in other folders)
