[project]
name = "flowbuddy-ha"
version = "0.0.0"
description = "Home Assistant custom integration for FlowBuddy (SIMPL / IZEN)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Andreas Maerten", email = "andreas.maerten@crimson7.io" }]

[project.optional-dependencies]
dev = [
  "homeassistant>=2025.1.0",
  "openapi-python-client>=0.21.0",
  "attrs>=23.2.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "pytest-homeassistant-custom-component>=0.13.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"custom_components/flowbuddy/_generated/**" = ["ALL"]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["custom_components/flowbuddy/_generated/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers -ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["custom_components/flowbuddy"]
omit = ["custom_components/flowbuddy/_generated/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
